petit eassaye sur la page d'accueil

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -6,9 +6,30 @@
     <link rel="stylesheet" href="style.css">
     <title>Blue Project</title>
 </head>
-<body>
+<header class="navbar">
     
-
+    <ul class="liste">
+        <li><a href="#"> Kaled</a></li>
+        <li><a href="#"> Oudin</a></li>
+        <li><a href="#"> pelagie</a></li>
+    </ul>
+</header>
+<body>
     <script src="main.js"></script>
+    
+    <h1>Welcome to the kingdom of blue</h1>
+    <form action=" " method="post">
+        <label for="nom">Username :</label>
+        <input type="text" id="nom" name="nom" required>
+        <!-- <p>Choisissez l'un des trois projets :</p>
+        <ul>
+            <li><a href="#"> Objet1 </a></li>
+            <li><a href="#"> Objet2 </a></li>
+            <li><a href="#"> Objet3 </a></li>
+        </ul> -->
+        <button type="submit">Jouer</button>
+    </form>
+   
+
 </body>
 </html>
