modification du header

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,11 +8,11 @@
 </head>
 <header class="navbar">
     
-    <ul class="liste">
+    <!-- <ul class="liste">
         <li><a href="#"> Kaled</a></li>
         <li><a href="#"> Oudin</a></li>
         <li><a href="#"> pelagie</a></li>
-    </ul>
+    </ul> -->
 </header>
 <body>
     <script src="main.js"></script>
@@ -27,7 +27,7 @@
             <li><a href="#"> Objet2 </a></li>
             <li><a href="#"> Objet3 </a></li>
         </ul> -->
-        <button type="submit">Jouer</button>
+        <button type="submit">Play</button>
     </form>
    
 
