affichage des infos joueur après création

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,7 +8,10 @@
 </head>
 <header class="navbar">
 
-    <h1>Bienvenue au Dileme Gastronomique</h1>
+    <div>
+       <h1 id="titre">Bienvenue au Dilemme Gastronomique</h1> 
+    </div>
+    
     
 </header>
 
