add maxleght to input name

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -21,7 +21,7 @@
             <form action="" class="formulaire" method="get" onsubmit="return false;">
                 <div id="cadreNom">
                     <label for="nom">Username :</label>
-                    <input type="text" id="nom" name="nom" required oninput="verifierCaracteres(this)">
+                    <input type="text" id="nom" name="nom" required oninput="verifierCaracteres(this)" maxlength="16">
                 </div>
             
                 <div id="objets">
