--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -20,8 +20,8 @@
         <div class="form-container">
             <form action="" class="formulaire" method="get" onsubmit="return false;">
                 <div id="cadreNom">
-                    <label for="nom">Username :</label>
-                    <input type="text" id="nom" name="nom" required oninput="verifierCaracteres(this)" maxlength="16">
+                    <label for="nom">Pseudonyme :</label>
+                    <input type="text" id="nom" name="nom" required oninput="verifierCaracteres(this)" maxlength="16" minlength="3">
                 </div>
             
                 <div id="objets">
